k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-wb-app
  labels:
    app: go-wb-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-wb-app
  template:
    metadata:
      labels:
        app: go-wb-app
    spec:
      containers:
      - name: go-wb-app
        image: harshit1105/go-wb-app-hk:v1
        ports:
        - containerPort: 8080
