k8s/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-wb-app
  labels:
    app: go-wb-app
spec:
  selector:
    app: go-wb-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
